# vocast

./: .gitignore  CLAUDE.md  CROSS-PLATFORM.md  DISTRIBUTION.md  LICENSE  PORTABILITY.md  QUALITY.md  README.md  STORAGE.md  denoise.py  evaluate.py  pyproject.toml  requirements.txt
.claude/: launch.json
.claude/skills/: landing.md
.claude/skills/review/: base.md
.github/workflows/: ci.yml  quality.yml
app/api/: dnjobs.py  models.py  profiles.py  server.py  storage.py
app/tests/: test_eta_coldstart.py
apps/mac/: build_app.sh
apps/mac/Vocast/: .gitignore  README.md
core/: __init__.py  audio.py  clone.py  denoise.py  dfn_worker.py  prosody.py  resynth_worker.py  tts_worker.py
docs/: DESIGN-BRIEF.md  index.html
docs/demo/: index.html
landing/: next.config.mjs
landing/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
landing/app/_sections/: Faq.tsx  Footer.tsx  Nav.tsx  faq-data.ts
landing/app/_seo/: JsonLd.tsx
landing/app/_ui/: StripeBand.tsx
landing/app/blog/: BlogList.tsx  _data.tsx  page.tsx
landing/app/compare/: _compare-body.tsx  (+1 more)
landing/lib/: asset.ts  schema.ts  site.ts
landing/public/: llms.txt
macapp/: build_app.sh
quality/: denoise_bench.py  run_eval.py
scripts/: build_bundle.ps1  build_bundle.sh  download_dnsmos.sh  install.sh  install_dfn.sh  install_resynth.sh  launcher.bat  launcher.command  make_release.sh
tests/: test_architecture.py  test_core.py
voice/: clone_say.py  evaluate_tts.py  requirements-voice.txt
web/: dnjobs.py  profiles.py  rates.py  server.py  storage.py
web/static/: index.html
(+44 files in other folders)
